--- a/packages/client/src/app/style/root.scss
+++ b/packages/client/src/app/style/root.scss
@@ -8,3 +8,17 @@ body,
   height: 100%;
   min-height: 1px;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+li {
+  list-style: none;
+}
